FIX: left panel %age width and scrollbar customization

--- a/css/chatroom.css
+++ b/css/chatroom.css
@@ -1,5 +1,9 @@
 @CHARSET "UTF-8";
 @media only screen and (min-width: 1024px) {
+	#bodybg-chatroom{
+		background-color: white;
+	}
+
 	#logout{
 		width: 43px;
 		height: 48px;
@@ -29,7 +33,8 @@
 		float: left;
 		position: relative;
 		height: 100%;
-		width: 260px;
+		width: 20%;
+		min-width: 260px;
 		border-right: 1px solid rgba(100, 184, 100, 0.56);
 		overflow: hidden;
 	}
@@ -37,7 +42,7 @@
 	#profileinfo{
 		position: relative;
 		width: 85%;
-		height: 8%;
+		height: 50px;
 		background-color: white;
 		margin: 0 auto;
 		margin-top: 10px;
@@ -104,10 +109,13 @@
 	}
 
 	#contactscontainer{
-		overflow-y: scroll;
+		overflow-y: hidden;
 		position: absolute;
-		width: 100%;
+		width: 95%;
 		height: 75%;
+	}
+	#contactscontainer:hover{
+		overflow-y: auto; 
 	}
 	.contact{
 		display: block;
@@ -137,5 +145,31 @@
 	    position: absolute;
 	    bottom: 0px;
 	}
+
+
+
+
+	/*Scroll bar*/
+	/* design scrollbar */
+
+	 ::-webkit-scrollbar{
+	       width: 10px;
+	 } /* this targets the default scrollbar (compulsory) */
+
+	 ::-webkit-scrollbar-track {
+	      background-color: rgba(0, 0, 0, 0);
+	} /* the new scrollbar will have a flat appearance with the set
+	background color */
+	::-webkit-scrollbar-thumb {
+	      background-color: rgba(25, 163, 228, 0.32);
+	} /* this will style the thumb, ignoring the track */
+	::-webkit-scrollbar-button {
+	      background-color: rgba(124, 41, 41, 0);
+	} /* optionally, you can style the top and the bottom buttons (left and
+	right for horizontal bars) */
+	::-webkit-scrollbar-corner {
+	      background-color: rgba(124, 41, 41, 0);
+	} /* if both the vertical and the horizontal bars appear, then perhaps
+	the right bottom corner also needs to be styled */
 
 }
